--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -11,6 +11,8 @@ navigation:
       location: devices.md
     - title: Troubleshooting
       location: trouble.md
+    - title: Migrating from the beta release
+      location: migrate-beta.md
     - title: API documentation
       children:
         - title: API authentication
