--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,1 +1,6 @@
 site_title: Snap Store Proxy documentation
+site_footer_links:
+  - location: trouble.html
+    title: Troubleshoot issues
+  - location: https://bugs.launchpad.net/snapstore-snap
+    title: File a bug
