Point at https://bugs.launchpad.net/snapstore for bugs filing
Fixes https://bugs.launchpad.net/snapstore-snap/+bug/1863885

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -4,5 +4,5 @@ site_favicon: ../media/snap-store-proxy-logo.ico
 site_footer_links:
   - location: trouble.html
     title: Troubleshoot issues
-  - location: https://bugs.launchpad.net/snapstore-snap
+  - location: https://bugs.launchpad.net/snapstore
     title: File a bug
