Add basic airgap documentation

--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -21,3 +21,5 @@ navigation:
           location: api-authentication.md
         - title: Overrides API
           location: api-overrides.md
+    - title: Air-gapped Snap Store Proxy (beta)
+      location: airgap.md
