--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -23,3 +23,6 @@ navigation:
           location: api-overrides.md
     - title: Air-gapped Snap Store Proxy (beta)
       location: airgap.md
+      children:
+        - title: Device Authenticated Airgap
+          location: airgap-device-auth.md
