--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,7 +2,7 @@ site_title: Snap Store Proxy documentation
 site_logo_url: ../media/snap-store-proxy-logo-32.png
 site_favicon: ../media/snap-store-proxy-logo.ico
 site_footer_links:
-  - location: trouble.html
+  - location: trouble
     title: Troubleshoot issues
   - location: https://bugs.launchpad.net/snapstore
     title: File a bug
