Drop the "beta" label from offline mode

--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -21,7 +21,7 @@ navigation:
           location: api-authentication.md
         - title: Overrides API
           location: api-overrides.md
-    - title: Air-gapped Snap Store Proxy (beta)
+    - title: Air-gapped Snap Store Proxy
       location: airgap.md
       children:
         - title: Device Authenticated Airgap
