--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -11,7 +11,7 @@ navigation:
       location: devices.md
     - title: Overriding snap revisions
       location: overrides.md
-    - title: Air-gapped Snap Store Proxy
+    - title: Offline mode
       location: airgap.md
       children:
         - title: Device Authenticated Airgap
