Integrate device authenticated airgap into the general offline mode docs
And modernise them, ie. `store-admin export store` instead of
`snap-store-proxy fetch-*` commands. (This also removes the usage of the
no longer supported by snapcraft old snapcraft export-login format.)

--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -11,11 +11,8 @@ navigation:
       location: devices.md
     - title: Overriding snap revisions
       location: overrides.md
-    - title: Offline mode
+    - title: Offline store
       location: airgap.md
-      children:
-        - title: Device Authenticated Airgap
-          location: airgap-device-auth.md
     - title: Troubleshooting
       location: trouble.md
     - title: API documentation
