Add Charmhub proxy documentation.
This MP adds an offline Charmhub section which covers the whole flow
for exporting and importing charms into an offline (airgap) instance
of Snap store proxy.

Part of: https://warthogs.atlassian.net/browse/SN-2445

--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -18,6 +18,8 @@ navigation:
           location: overrides.md
         - title: Offline store
           location: airgap.md
+        - title: Offline Charmhub
+          location: airgap-charmhub.md
         - title: On-prem model service
           location: on-prem-model-service.md
         - title: Troubleshooting
