--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 /html
+/*env*/
+.sphinx/venv/
+.sphinx/requirements.txt
+.sphinx/warnings.txt
+.sphinx/.wordlist.dic
+.sphinx/.doctrees/
+.sphinx/node_modules/
+package*.json
+_build
+.DS_Store
+__pycache__
+.idea/
+.vscode/
+.sphinx/styles/*
+.sphinx/vale.ini
